src/App.css
@media (max-width: 1000px) {
  #parts_header {
    flex-direction: column;
    height: 80px;
  }

  #parts_header h1 {
    font-size: 12px;
    line-height: 0.5;
  }
}

.lesson {
  line-height: 2;
}

